--- a/Streams-SegmentIntegrationSample.ipynb
+++ b/Streams-SegmentIntegrationSample.ipynb
@@ -21,6 +21,7 @@
     "            <li>1.3 <a href=\"#setupSegment\">Install or upgrade Segment Python packages</a></li>\n",
     "        </ul>\n",
     "    </li>\n",
+    "    <br/>\n",
     "    <li><a href=\"#dataProcessingClassesFunctions\">Data processing classes and functions</a>\n",
     "        <ul>\n",
     "            <li>2.1 <a href=\"#dataGeneratorClass\">Data generator class</a></li>\n",
@@ -28,6 +29,7 @@
     "            <li>2.3 <a href=\"#sinkFunction\">The sink function</a></li>\n",
     "        </ul>\n",
     "    </li>\n",
+    "    <br/>\n",
     "    <li><a href=\"#createApplication\">Create the application</a>\n",
     "        <ul>\n",
     "            <li>3.1 <a href=\"#mockupWebhookDataPublisher\">Mock-up Webhook data publisher</a></li>\n",
@@ -35,6 +37,7 @@
     "            <li>3.3 <a href=\"#streamsSegmentIntegration\">Streams Segment Integration</a></li>\n",
     "        </ul>\n",
     "    </li>\n",
+    "    <br/>\n",
     "    <li><a href=\"#cancel\">Cancel all jobs</a></li>\n",
     "</ol>\n",
     "\n",
@@ -65,7 +68,7 @@
     "- [streamsx.topology Python API](https://streamsxtopology.readthedocs.io/)\n",
     "- [streamsx.endpoint Python API](https://streamsxendpoint.readthedocs.io/)\n",
     "- [Segment Spec](https://segment.com/docs/spec/)\n",
-    "- [Sepment Python Source API](https://segment.com/docs/sources/server/python/)\n",
+    "- [Segment Python Source API](https://segment.com/docs/sources/server/python/)\n",
     "- [Segment Webhooks Destination](https://segment.com/docs/destinations/webhooks/)\n",
     "\n",
     "\n"
@@ -100,7 +103,11 @@
     "\n",
     "This notebook is running in IBM Cloud Pak for Data and we are using an IBM Streams instance running in IBM Cloud Pak for Data.<br>\n",
     "To get all required information to connect to the Streams instance, change the instance name in the cell below to the name of the<br>\n",
-    "instance that you plan to use.\n",
+    "instance that you plan to use:\n",
+    "\n",
+    "- From the navigation menu, click My instances.\n",
+    "- Click the Provisioned Instances tab.\n",
+    "- Update the value of streams_instance_name in the cell below according to your Streams instance name.\n",
     "\n"
    ]
   },
@@ -112,7 +119,8 @@
    "source": [
     "\n",
     "from icpd_core import icpd_util\n",
-    "cfg=icpd_util.get_service_instance_details(name='zen-sample-icp1-blitz-env')\n"
+    "streams_instance_name = 'sample-streams'     ## Insert the name of your Streams instance here\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)\n"
    ]
   },
   {
@@ -134,6 +142,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "!{sys.executable} -m pip install --user --upgrade streamsx\n",
     "!{sys.executable} -m pip install --user --upgrade streamsx.endpoint\n",
     "\n",
@@ -144,11 +153,11 @@
     "# show the installed versions of both packages\n",
     "import streamsx.topology.context\n",
     "import streamsx.endpoint as endpoint\n",
-    "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
+    "print(\"INFO: streamsx.topology.context package version: \" + streamsx.topology.context.__version__)\n",
     "print(\"INFO: streamsx.endpoint package version: \" + endpoint.__version__)\n",
     "\n",
     "#For more details uncomment lines below.\n",
-    "#!pip show streamsx\n",
+    "!pip show streamsx\n",
     "#print(cfg)\n"
    ]
   },
@@ -483,9 +492,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from streamsx.topology.topology import *\n",
-    "from streamsx.topology.schema import *\n",
-    "import streamsx.topology.context\n",
+    "from streamsx.topology.topology import Topology\n",
+    "#from streamsx.topology.schema import *\n",
+    "\n",
+    "#import streamsx.topology.context\n",
     "\n",
     "\n",
     "# Create topology\n",
@@ -908,7 +918,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -922,7 +932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
