--- a/Streams-SegmentIntegrationSample.ipynb
+++ b/Streams-SegmentIntegrationSample.ipynb
@@ -297,15 +297,14 @@
     "        self.songsCount      = len(self.songs)\n",
     "        \n",
     "\n",
-    "    def __enter__(self):\n",
-    "        print(\"INFO: Webhook Data Source starting up\")\n",
+    "#    def __enter__(self):\n",
+    "#        print(\"INFO: Webhook Data Source starting up\")\n",
     "\n",
-    "    def __exit__(self, excptn_type, excptn_value, traceback):\n",
-    "        if excptn_type or excptn_value or traceback:\n",
-    "            print(\"WARN: Some exception\")\n",
-    "        else:\n",
-    "            #Process is shutting down\n",
-    "            return False\n",
+    "#    def __exit__(self, excptn_type, excptn_value, traceback):\n",
+    "#        if excptn_type or excptn_value or traceback:\n",
+    "#            print(\"WARN: Some exception\")\n",
+    "#        else:\n",
+    "#            print(\"Process is shutting down\")\n",
     "\n",
     "        \n",
     "    def generateMessageId(self):\n",
@@ -493,7 +492,7 @@
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
-    "#from streamsx.topology.schema import *\n",
+    "from streamsx.topology.schema import CommonSchema\n",
     "\n",
     "#import streamsx.topology.context\n",
     "\n",
