--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -75,7 +75,30 @@
    "outputs": [],
    "source": [
     "#import sys\n",
-    "#!{sys.executable} -m pip install --user --upgrade streamsx.eventstreams\n"
+    "#!pip install --user --upgrade streamsx.eventstreams"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The python packages will be installed in the top of user path.<br/>\n",
+    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
+    "you can find the user path with this command:<br/>\n",
+    "`\n",
+    "import sys\n",
+    "for e in sys.path:\n",
+    "    print(e)\n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
    ]
   },
   {
