--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "source": [
     "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packeges you can set the order of python packages manually to user path. <br/>\n",
+    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path. <br/>\n",
     "you can find the user path  with this command:<br/>\n",
     "`\n",
     "import sys\n",
