--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -69,7 +69,30 @@
    "outputs": [],
    "source": [
     "#import sys\n",
-    "#!{sys.executable} -m pip install --user --upgrade streamsx.database"
+    "#!pip install --user --upgrade streamsx.database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The python packages will be installed in the top of user path.<br/>\n",
+    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
+    "you can find the user path with this command:<br/>\n",
+    "`\n",
+    "import sys\n",
+    "for e in sys.path:\n",
+    "    print(e)\n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
    ]
   },
   {
@@ -143,7 +166,7 @@
     "### 1.3.1 Alternative: Use a configured external connection\n",
     "\n",
     "Perform the steps [Connecting to data source](https://docs-icpdata.mybluemix.net/docs/content/SSQNUZ_current/com.ibm.icpdata.doc/igc/t_connect_data_sources.html) \n",
-    "and create a external configuration for your Db2 connection.\n",
+    "and create an external configuration for your Db2 connection.\n",
     "\n",
     "List the connections with the cell below:"
    ]
