--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "source": [
     "The python packages will be installed in the top of user path.<br/>\n",
-    "If you have problem to get the latest version of python packeges you can set the order of python packages manually to user path.<br/>\n",
+    "If you have problem to get the latest version of python packages you can set the order of python packages manually to user path.<br/>\n",
     "you can find the user path with this command:<br/>\n",
     "`\n",
     "import sys\n",
@@ -116,7 +116,7 @@
     "### <a name=\"credentials\"> </a> 1.3 Configure the connection to HBASE\n",
     "\n",
     "Perform the steps [Connecting to data source](https://docs-icpdata.mybluemix.net/docs/content/SSQNUZ_current/com.ibm.icpdata.doc/igc/t_connect_data_sources.html) \n",
-    "and create a external configuration for your HBASE connection.\n",
+    "and create an external configuration for your HBASE connection.\n",
     "\n",
     "1. Select as connection type \"HDFS-HDP\"\n",
     "2. Enter HDFS \"host\" and \"port\"\n",
