import sys moved to other cell

--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -102,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import sys\n",
     "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
    ]
   },
