--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -425,7 +425,7 @@
     "\n",
     "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the Streams Console. Go to My Instances > Provisioned Instances. Select the Streams instance and open the URL listed under externalConsoleEndpoint or serviceConsoleEndpoint.\n",
+    "To view other information about the job such as detailed metrics, access the graph. Go to My **Instances** > **Jobs**. Select \"View graph\" action for the running job.\n",
     "\n"
    ]
   },
