--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -445,7 +445,7 @@
     "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
     "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the Streams Console.  Go to **My Instances** > **Provisioned Instances**. Select the Streams instance and open the URL listed under *externalConsoleEndpoint* or *serviceConsoleEndpoint*."
+    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n"
    ]
   },
   {
