path for local files changed

--- a/Streams-KafkaSample.ipynb
+++ b/Streams-KafkaSample.ipynb
@@ -161,10 +161,9 @@
     "    -----END CERTIFICATE-----\n",
     "    \"\"\"\n",
     "\n",
-    "or you can upload certificate and key files as *Data Sets* to your project and use the file names of the local files.\n",
+    "or you can upload certificate and key files as *Data Assets* to your project and use the file names of the local files.\n",
     "\n",
-    "    import os\n",
-    "    ca_server_cert = os.environ['DSX_PROJECT_DIR'] + '/datasets/<your dataset name>'\n",
+    "    ca_server_cert = '/project_data/data_asset/<your dataset name>'\n",
     "\n",
     "In the Kafka broker, create a partitioned topic, for example with three partitions. Enter the bootstrap servers and the topic name into the below cell.\n",
     "\n",
@@ -494,7 +493,7 @@
    "source": [
     "<a name=\"view\"></a>\n",
     "# 5. Use a `View` to access data from the job\n",
-    "Now that the job is started, use the `View` object you created in [step 2.4](#create_view) to start retrieving data from a `Stream`."
+    "Now that the job is started, use the `View` object you created in [step 2.3](#create_view) to start retrieving data from a `Stream`."
    ]
   },
   {
