--- a/Streams-KafkaSample.ipynb
+++ b/Streams-KafkaSample.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "**About the sample**\n",
     "\n",
-    "The main goal of the sample is to show how to connect to a Kafka broker and how to create a Kafka consumer group. A consumer group is mostly used to consume partitioned topics with multiple consumers sharing the partitions. The messages are typically distributed to the partitions by using a *key*.\n",
+    "The main goal of the sample is to show how to connect to a Kafka cluster and how to create a Kafka consumer group. A consumer group is mostly used to consume partitioned topics with multiple consumers sharing the partitions. The messages are typically distributed to the partitions by using a *key*.\n",
     "\n",
     "Consuming a single-partition topic with more than one consumer has no advantage as failed consumers are restarted by Streams nearly as quickly as a failover of the single partition to another consumer would take.\n",
     "\n",
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Configure the connection to the Kafka broker\n",
+    "### 1.3 Configure the connection to the Kafka cluster\n",
     "\n",
     "Kafka consumers and producers are configured by properties. They are described in the Kafka documentation in separate sections for [producer configs](https://kafka.apache.org/22/documentation.html#producerconfigs) and [consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs). In Python, you will be using a `dict` variable for the properties.\n",
     "\n",
@@ -205,7 +205,7 @@
    "source": [
     "## 2.1 Create the consumer properties from your connection details\n",
     "\n",
-    "Use the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/1.4.0/#streamsx.kafka.create_connection_properties) to create the properties.\n",
+    "Use the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties) to create the properties.\n",
     "\n",
     "Dependent on the Kafka cluster configuration you may need\n",
     "- A trusted server CA certificate\n",
@@ -267,7 +267,7 @@
     "\n",
     "From the Kafka broker we fetch keyed messages, where the message type is a string. In addition to it we want to fetch the message meta data, like partition number, message timestamp, and other.\n",
     "\n",
-    "That's why we specify `Schema.StringMessageMeta` as the schema for the created Stream in the [kafka.subscribe](https://streamsxkafka.readthedocs.io/en/1.4.0/index.html#streamsx.kafka.subscribe) function.\n",
+    "That's why we specify `Schema.StringMessageMeta` as the schema for the created Stream in the [kafka.subscribe](https://streamsxkafka.readthedocs.io/en/latest/index.html#streamsx.kafka.subscribe) function.\n",
     "\n",
     "This schema is a structured schema that defines following attributes:\n",
     "\n",
@@ -335,16 +335,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "# publish results as JSON\n",
+    "# publish results as Strings\n",
     "received.publish(topic=\"SensorData\",\n",
     "                 schema=str,\n",
     "                 name=\"PublishSensors\")\n",
     "\n",
     "# other options include:\n",
     "# invoke another sink function:\n",
-    "# parallelEnd.for_each (func=send_to_db)\n",
-    "# parallelEnd.print()"
+    "# received.for_each(func=send_to_db)\n",
+    "# received.print()"
    ]
   },
   {
@@ -354,7 +353,7 @@
     "<a id=\"create_2\"></a>\n",
     "# 3. Create a simple producer application\n",
     "\n",
-    "To make the consumer application work, we need to publish some data to the topic. Therefore we create another, less complicated application that publishes data to the Kafka broker.\n",
+    "To make the consumer application work, we need to publish some data to the topic. Therefore we create another application that publishes data to the Kafka cluster.\n",
     "\n",
     "## 3.1 Define a data generator for the messages and a source stream"
    ]
@@ -415,7 +414,7 @@
     "\n",
     "### 3.2.1 Create the producer properties from your connection details\n",
     "\n",
-    "We will be using the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/1.4.0/#streamsx.kafka.create_connection_properties), but will use the `producer_topology` variable as the `topology` parameter to get any created keystore or truststore files attached as file dependencies.\n"
+    "We will be using the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties), but will use the `producer_topology` variable as the `topology` parameter to get any created keystore or truststore files attached as file dependencies.\n"
    ]
   },
   {
@@ -586,7 +585,7 @@
    "source": [
     "# 7. Congratulation\n",
     "\n",
-    "You created a Streams application that connected to a Kafka broker with a consumer group for load sharing and managed to connect to a Kafka cluster with non-trivial connection settings. Finally you sampled the received data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe to it.\n",
+    "You created a Streams application that connected to a Kafka broker with a consumer group for load sharing and managed to connect to a Kafka cluster with non-trivial connection settings. Finally you sampled the received data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe Streams internally to it.\n",
     "\n",
     "Not to forget, to bring the application to life, you also created a simple producer application, which published artificial sensor data to the Kafka topic."
    ]
