PMML NB: remove actual instance name

--- a/Streams-PMMLScoringSample.ipynb
+++ b/Streams-PMMLScoringSample.ipynb
@@ -117,8 +117,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "#streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
-    "streams_instance_name = \"sample-streams\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
