moved install of Python packages on the top #10

--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -33,32 +33,14 @@
     "\n",
     "\n",
     "## <a name=\"setup\"> </a> 1. Setup\n",
-    "\n",
-    "### 1.1 Add credentials for the IBM Streams service\n",
-    "\n",
-    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
-    "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Optional: Upgrade the `streamsx.hbase` Python package\n",
+    "### 1.1 Optional: Upgrade the `streamsx.hbase` Python package\n",
     "\n",
     "Uncomment and run the cell below, if you want to upgrade to the latest version of the `streamsx.hbase` package."
    ]
@@ -70,7 +52,8 @@
    "outputs": [],
    "source": [
     "#!pip install --user --upgrade streamsx\n",
-    "#!pip install --user --upgrade streamsx.hbase"
+    "#!pip install --user --upgrade streamsx.hbase\n",
+    "#!pip list | grep streamsx.hbase"
    ]
   },
   {
@@ -94,7 +77,7 @@
    "outputs": [],
    "source": [
     "#import sys\n",
-    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')"
+    "#sys.path.insert(0, '/home/wsuser/.local/lib/python3.6/site-packages')\n"
    ]
   },
   {
@@ -107,6 +90,32 @@
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
     "print(\"INFO: streamsx.hbase package version: \" + hb.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 1.2 Add credentials for the IBM Streams service\n",
+    "\n",
+    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
+    "\n",
+    "1. From the navigation menu, click **My instances**.\n",
+    "2. Click the **Provisioned Instances** tab.\n",
+    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from icpd_core import icpd_util\n",
+    "streams_instance_name = \"my-instance\" ## Change \"my-instance\" to Streams instance\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
   {
@@ -186,7 +195,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"insert\"> </a> 2.2. Insert streaming data into the table\n",
+    "## <a name=\"download\"> </a> 2.2. Download the latest version of streamsx.hbase toolkit\n",
+    "If you want to work with the latest version of streamsx.hbase toolkit, it is possible to download the toolkit and add the hbase toolkit location to your topology. <br/>\n",
+    "The list of releases of streamsx.hdfs are in github: <br/>\n",
+    "    \"https://github.com/IBMStreams/streamsx.hbase/releases\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_hbase_version = 'https://github.com/IBMStreams/streamsx.hbase/releases/download/v3.8.0/streamsx.hbase.toolkits-3.8.0-20190829-1529.tgz'\n",
+    "hbase_toolkit_location = hbase.download_toolkit(url=url_hbase_version)\n",
+    "streamsx.spl.toolkit.add_toolkit(topo, hbase_toolkit_location)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a name=\"insert\"> </a> 2.3. Insert streaming data into the table\n",
     "\n",
     "Next, we generate a stream of data and insert it into the table we created.<br/>\n",
     "But befor we start the application, we have to create an HBASE test table on our hadoop server.<br/>\n",
@@ -236,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"get\"> </a> 2.3. get data from the table\n",
+    "## <a name=\"get\"> </a> 2.4. get data from the table\n",
     "Now we get rows from the table. <br/>\n",
     "The function `_create_query_stream_for_get` creates a stream that contains queries. <br/>\n",
     "The function `hbase.get` gets `getStrem` as input stream and returns selected rows. <br/>\n",
@@ -263,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a name=\"scan\"> </a> 2.4. scan all rows from the table\n",
+    "## <a name=\"scan\"> </a> 2.5. scan all rows from the table\n",
     "In the next step we scan all rows from the table.<br/>\n",
     "The function `hbase.scan` returns all rows from the HBASE table.<br/>\n",
     "This parameter `init_delay` specifies the time to wait in seconds before the operator scans the rows. <br/>\n",
@@ -329,7 +359,7 @@
     "# Connect to the view and display the selected data\n",
     "queue = scannedView.start_data_fetch()\n",
     "try:\n",
-    "    for val in range(20):\n",
+    "    for val in range(5):\n",
     "        print(queue.get())    \n",
     "finally:\n",
     "    scannedView.stop_data_fetch()"
