--- a/Streams-HdfsSample.ipynb
+++ b/Streams-HdfsSample.ipynb
@@ -35,31 +35,15 @@
     "\n",
     "## <a name=\"setup\"> </a> 1. Setup\n",
     "\n",
-    "### 1.1 Add credentials for the IBM Streams service\n",
-    "\n",
-    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
-    "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from icpd_core import icpd_util\n",
-    "streams_instance_name =\"my-instance\" ## Change this to Streams instance\n",
-    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
+    " "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Optional: Upgrade the `streamsx.hdfs` Python package\n",
+    "### 1.1 Optional: Upgrade the `streamsx.hdfs` Python package\n",
+    "In the first step we have to check the already installed Python packages and if necessary, upgrade them. <br/>\n",
     "\n",
     "Uncomment and run the cell below, if you want to upgrade to the latest version of the `streamsx` and `streamsx.hdfs` package."
    ]
@@ -71,7 +55,8 @@
    "outputs": [],
    "source": [
     "#!pip install --user --upgrade streamsx\n",
-    "#!pip install --user --upgrade streamsx.hdfs"
+    "#!pip install --user --upgrade streamsx.hdfs\n",
+    "#!pip list | grep streamsx.hdfs"
    ]
   },
   {
@@ -108,6 +93,32 @@
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
     "print(\"INFO: streamsx.hdfs package version: \" + hdfs.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 1.2 Add credentials for the IBM Streams service\n",
+    "\n",
+    "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
+    "\n",
+    "1. From the navigation menu, click **My instances**.\n",
+    "2. Click the **Provisioned Instances** tab.\n",
+    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from icpd_core import icpd_util\n",
+    "streams_instance_name =\"my_instance\" ## Change \"my_instance\" to current running Streams instance\n",
+    "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
   {
@@ -196,8 +207,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url500 = 'https://github.com/IBMStreams/streamsx.hdfs/releases/download/v5.0.0/streamx.hdfs.toolkits-5.0.0-20190902-1637.tgz'\n",
-    "hdfs_toolkit_location = hdfs.download_toolkit(url=url500)\n",
+    "streamsx_hdfs_url = 'https://github.com/IBMStreams/streamsx.hdfs/releases/download/v5.1.0/streamx.hdfs.toolkits-5.1.0-20191002-1505.tgz'\n",
+    "hdfs_toolkit_location = hdfs.download_toolkit(url=streamsx_hdfs_url)\n",
     "streamsx.spl.toolkit.add_toolkit(topo, hdfs_toolkit_location)\n"
    ]
   },
