Add install Python packages on the top

--- a/Streams-HbaseSample.ipynb
+++ b/Streams-HbaseSample.ipynb
@@ -42,6 +42,7 @@
    "source": [
     "### 1.1 Optional: Upgrade the `streamsx.hbase` Python package\n",
     "\n",
+    "In the first step we have to check the already installed Python packages and if necessary, upgrade them.<br/>\n",
     "Uncomment and run the cell below, if you want to upgrade to the latest version of the `streamsx.hbase` package."
    ]
   },
