changes for streamsx 1.13.x

--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
-    "streams_instance_name = \"my-instance\" ## Change this to Streams instance\n",
+    "streams_instance_name = \"my-instance\" ## change this to Streams instance\n",
     "cfg=icpd_util.get_service_instance_details(name=streams_instance_name)"
    ]
   },
@@ -196,7 +196,7 @@
     "from streamsx.kafka.schema import Schema\n",
     "from streamsx.kafka import AuthMethod\n",
     "\n",
-    "topic =  # add the Kafka topic here, it should have multiple partitions\n",
+    "topic = \"my_topic\"  ## change this to an existing topic, it should have multiple partitions\n",
     "consumer_topology = Topology(name='KafkaParallelSample-Consumer')"
    ]
   },
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "# this template connects to an unsecured (no TLS) cluster without authentication \n",
-    "bootstrap_servers =     # add the bootstrap server(s) here\n",
+    "bootstrap_servers = \"host.domain:9092\"    ## add the bootstrap server(s) here\n",
     "connect_tls = False     # set True when Kafka must be connected with TLS\n",
     "ca_server_cert = None   # use PEM or filename if required, see section 1.3.1\n",
     "auth = AuthMethod.NONE  # chose one of NONE, TLS, PLAIN, SCRAM_SHA_512\n",
@@ -232,6 +232,7 @@
     "client_priv_key = None  # use PEM or filename if auth is TLS\n",
     "username = None         # required for PLAIN and SCRAM_SHA_512\n",
     "password = None         # required for PLAIN and SCRAM_SHA_512\n",
+    "\n",
     "\n",
     "consumer_configs = kafka.create_connection_properties(\n",
     "    bootstrap_servers=bootstrap_servers,\n",
@@ -246,7 +247,9 @@
     "    topology=consumer_topology)\n",
     "\n",
     "# print the consumer configs for reference. Note, that they can contain sensitive data\n",
-    "print ('Properties = ' + str(consumer_configs))"
+    "print()\n",
+    "for key, value in consumer_configs.items():\n",
+    "    print(key + \"=\" + value)"
    ]
   },
   {
@@ -294,7 +297,7 @@
     "    group='my_consumer_group', # when not specified it is the job name, concatenated with the topic\n",
     "    kafka_properties=consumer_configs,\n",
     "    name=\"SensorSubscribe\"\n",
-    "    ).set_parallel(3).end_parallel()\n"
+    "    ).set_parallel(3).end_parallel()"
    ]
   },
   {
@@ -317,9 +320,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate a hash code of a string in a consistent way\n",
+    "# calculate a hash code of the key attribute in our tuple in a consistent way\n",
     "# needed for partitioned parallel streams\n",
-    "def string_hashcode(s):\n",
+    "def hashcode_of_key(tuple):\n",
+    "    s = tuple['key']\n",
     "    h = 0\n",
     "    for c in s:\n",
     "        h = (31 * h + ord(c)) & 0xFFFFFFFF\n",
@@ -331,7 +335,7 @@
     "receivedParallelPartitioned = received.parallel(\n",
     "    4,\n",
     "    routing=Routing.HASH_PARTITIONED,\n",
-    "    func=lambda x: string_hashcode(x['key']))\n"
+    "    func=hashcode_of_key)"
    ]
   },
   {
@@ -347,8 +351,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import typing\n",
     "import json\n",
+    "import typing\n",
     "class SensorMessage(typing.NamedTuple):\n",
     "    sensor_id: str\n",
     "    reading: float\n",
@@ -359,32 +363,38 @@
     "\n",
     "# parses the JSON in the message and adds the attributes to a tuple\n",
     "def parse_json_to_tuple(tuple):\n",
-    "    # the tuple is passed in as dict, the output tuple is typing.NamedTuple\n",
-    "    messageAsDict = json.loads(tuple['message']) # {\"sensor_id\": \"sensor_4545\", \"value\": 3567.87, \"ts\": 1559029421}\n",
-    "    # 5 required positional arguments: 'sensor_id', 'reading', 'ts', 'partition', and 'messageTimestamp'\n",
-    "    return SensorMessage(\n",
-    "        messageAsDict['sensor_id'],\n",
-    "        messageAsDict['value'],\n",
-    "        messageAsDict['ts'],\n",
-    "        tuple['partition'],\n",
-    "        tuple['messageTimestamp']\n",
-    "    )\n",
+    "    # the tuple is passed in as dict, the output tuple is also a dict, but\n",
+    "    # must contain the attributes of the 'SensorMessage' class\n",
+    "    messageAsDict = json.loads(tuple['message'])\n",
+    "    # as an example, here we have {\"sensor_id\": \"sensor_4545\", \"value\": 3567.87, \"ts\": 1559029421}\n",
+    "    result = dict()\n",
+    "    result['sensor_id'] = messageAsDict['sensor_id']\n",
+    "    result['reading'] = messageAsDict['value']\n",
+    "    result['ts'] = messageAsDict['ts']\n",
+    "    # add the fields from the Kafka message meta data of the incoming tuple:\n",
+    "    result['partition'] = tuple['partition']\n",
+    "    result['messageTimestamp'] = tuple['messageTimestamp']\n",
+    "    return result\n",
+    "\n",
     "\n",
     "# map the parallelized stream to the new schema\n",
     "receivedParallelPartitionedParsed = receivedParallelPartitioned.map(\n",
     "    func=parse_json_to_tuple,\n",
     "    name='ParseMsgJson',\n",
-    "    schema=SensorMessage)\n",
+    "    schema=SensorMessage)  # tuple passing will be named tuple: class SensorMessage\n",
+    "\n",
     "\n",
     "# validate by removing negative and zero values from the streams,\n",
     "# pass only positive values and timestamps\n",
     "receivedValidated = receivedParallelPartitionedParsed.filter(\n",
     "    # remember, the tuple tup is passed as a Python named tuple, not as a dict\n",
-    "    lambda tup: (tup.reading > 0) and (tup.ts > 0),\n",
+    "    func=lambda _tuple: (_tuple.reading > 0) and (_tuple.ts > 0),\n",
     "    name='Validate')\n",
     "\n",
-    "# end parallel processing and (dummy) filter as it is not possible to create a view on a combined stream directly\n",
-    "parallelEnd = receivedValidated.end_parallel().filter(lambda x: x)\n"
+    "\n",
+    "# end parallel processing and (dummy) filter as it is not possible to\n",
+    "# create a view on a combined stream directly\n",
+    "parallelEnd = receivedValidated.end_parallel().filter(lambda x: x)"
    ]
   },
   {
@@ -474,7 +484,7 @@
     "            time.sleep(0.001)\n",
     "            i = i + 1\n",
     "            sensor_id = random.randint(1, 100)\n",
-    "            reading = {}\n",
+    "            reading = dict()\n",
     "            reading[\"sensor_id\"] = \"sensor_\" + str(sensor_id)\n",
     "            reading[\"value\"] = random.random() * 3000\n",
     "            reading[\"ts\"] = int(datetime.now().timestamp())\n",
@@ -491,7 +501,7 @@
     "        func=lambda reading: {'message': json.dumps(reading),\n",
     "                              'key': reading['sensor_id']},\n",
     "        name=\"ToKeyedMessage\",\n",
-    "        schema=Schema.StringMessage)\n"
+    "        schema=Schema.StringMessage)"
    ]
   },
   {
@@ -529,7 +539,12 @@
     "    sensorStream,\n",
     "    topic=topic,\n",
     "    kafka_properties=producer_configs,\n",
-    "    name=\"SensorPublish\")"
+    "    name=\"SensorPublish\")\n",
+    "\n",
+    "# print the producer configs for reference. Note, that they can contain sensitive data\n",
+    "print()\n",
+    "for key, value in producer_configs.items():\n",
+    "    print(key + \"=\" + value)"
    ]
   },
   {
