Streams-KafkaBasicSample.ipynb update

--- a/Streams-KafkaBasicSample.ipynb
+++ b/Streams-KafkaBasicSample.ipynb
@@ -6,9 +6,9 @@
     "collapsed": true
    },
    "source": [
-    "# IBM Streams Kafka sample application\n",
+    "# IBM Streams basic Kafka sample application\n",
     "\n",
-    "This sample demonstrates how to create a Streams Python application that connects to a Kafka cluster.\n",
+    "This sample demonstrates how to create a Streams Python application that connects to a Kafka cluster. The focus of this notebokk is on creating a connection with a Kafka cluster.\n",
     "\n",
     "A Kafka cluster is typically setup and configured by an administrator, but it is also possible that you setup a single Kafka broker on a virtual or physical machine by yourself following the instructions on https://kafka.apache.org/quickstart. In this case you know the details, how to connect, and what topics can be used. Otherwise the administrator of the Kafka cluster must provide the required information.\n",
     "\n",
@@ -195,8 +195,7 @@
     "from streamsx.kafka.schema import Schema\n",
     "from streamsx.kafka import AuthMethod\n",
     "\n",
-    "topic =  # add the Kafka topic here, it should have multiple partitions\n",
-    "consumer_topology = Topology(name='KafkaSample-Consumer')"
+    "consumer_topology = Topology(name='KafkaBasicSample-Consumer')"
    ]
   },
   {
@@ -213,7 +212,9 @@
     "  - No authentication\n",
     "  - SASL/PLAIN - you need a username and a password\n",
     "  - SASL/SCRAM-SHA-512 - you need a username and a password\n",
-    "  - TLS - you need a client certificate and the private key of the certificate.\n"
+    "  - TLS - you need a client certificate and the private key of the certificate.\n",
+    "\n",
+    "You always need a topic name that can be accessed."
    ]
   },
   {
@@ -222,6 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "topic =  # add the Kafka topic here, it should have multiple partitions\n",
+    "\n",
     "# this template connects to an unsecured (no TLS) cluster without authentication \n",
     "bootstrap_servers =     # add the bootstrap server(s) here\n",
     "connect_tls = False     # set True when Kafka must be connected with TLS\n",
@@ -258,10 +261,10 @@
     "    <b>Warning:</b>\n",
     "When a certificate or private key is used to create properties, the topology parameter must not be <tt>None</tt>. In this case, the function <tt>create_connection_properties</tt> creates a keystore and/or a truststore file, which are attached as file dependencies to the topology, whereas the filenames go into the created properties.\n",
     "    \n",
-    "These properties can therefore not be used within a different topology.\n",
+    "These properties can therefore not be used together with a different topology.\n",
     "</div>\n",
     "\n",
-    "The `group.id` config is not required here. The group identifier is specified on Python API level later. However, when you need other special [consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs), you should add them to the `consumer_configs` dict variable here.\n",
+    "The `group.id` config is not required here. The group identifier is specified on Python API level later. However, when you need other special [Kafka consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs), you should add them to the `consumer_configs` dict variable here.\n",
     "\n",
     "## 2.2 Create the consumer group\n",
     "\n",
@@ -390,7 +393,7 @@
     "            reading[\"ts\"] = int(datetime.now().timestamp())\n",
     "            yield reading\n",
     "\n",
-    "producer_topology = Topology(name='KafkaSample-Producer')\n",
+    "producer_topology = Topology(name='KafkaBasicSample-Producer')\n",
     "\n",
     "# create the data and map them to the attributes 'message' and 'key' of the\n",
     "# 'Schema.StringMessage' schema for Kafka, so that we have messages with keys\n",
@@ -414,7 +417,11 @@
     "\n",
     "### 3.2.1 Create the producer properties from your connection details\n",
     "\n",
-    "We will be using the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties), but will use the `producer_topology` variable as the `topology` parameter to get any created keystore or truststore files attached as file dependencies.\n"
+    "We will be using the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties), but will use the `producer_topology` variable as the `topology` parameter to get any created keystore or truststore files attached as file dependencies.\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    <b>Info:</b>\n",
+    "We intentionally do not re-use the consumer properties for the producer application. In case we use certificates in any way, we have created consumer configurations that include a keystore or truststore file, which was added as a file dependency to the consumer topology. When we re-used the consumer properties here we would miss the file dependency in the prodcuer topology.\n",
+    "</div>\n"
    ]
   },
   {
@@ -585,7 +592,7 @@
    "source": [
     "# 7. Congratulation\n",
     "\n",
-    "You created a Streams application that connected to a Kafka broker with a consumer group for load sharing and managed to connect to a Kafka cluster with non-trivial connection settings. Finally you sampled the received data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe Streams internally to it.\n",
+    "You created a Streams application that connected to a Kafka cluster with a consumer group for load sharing and managed to connect to a Kafka cluster with potentially non-trivial connection settings. Finally you sampled the received data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe Streams internally to it.\n",
     "\n",
     "Not to forget, to bring the application to life, you also created a simple producer application, which published artificial sensor data to the Kafka topic."
    ]
