corections (broken links, access to data assets) in Streams-KafkaParallelSample.ipynb

--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Configure the connection to the Kafka broker\n",
+    "### 1.3 Configure the connection to the Kafka cluster\n",
     "\n",
     "Kafka consumers and producers are configured by properties. They are described in the Kafka documentation in separate sections for [producer configs](https://kafka.apache.org/22/documentation.html#producerconfigs) and [consumer configs](https://kafka.apache.org/22/documentation.html#consumerconfigs). In Python, you will be using a `dict` variable for the properties.\n",
     "\n",
@@ -161,12 +161,11 @@
     "    -----END CERTIFICATE-----\n",
     "    \"\"\"\n",
     "\n",
-    "or you can upload certificate and key files as *Data Sets* to your project and use the file names of the local files.\n",
+    "or you can upload certificate and key files as *Data Assets* to your project and use the file names of the local files.\n",
     "\n",
-    "    import os\n",
-    "    ca_server_cert = os.environ['DSX_PROJECT_DIR'] + '/datasets/<your dataset name>'\n",
+    "    ca_server_cert = '/project_data/data_asset/<your dataset name>'\n",
     "\n",
-    "In the Kafka broker, create a partitioned topic, for example with three partitions. Enter the bootstrap servers and the topic name into the below cell.\n",
+    "In the Kafka cluster, create a partitioned topic, for example with three partitions.\n",
     "\n",
     "\n",
     "<a id=\"create_1\"></a>\n",
@@ -178,7 +177,6 @@
     "```\n",
     "{\"sensor_id\": \"sensor_4545\", \"value\": 3567.87, \"ts\": 1559029421}\n",
     "```\n",
-    "\n",
     "\n",
     "All Streams applications start with a Topology object, so start by creating one:"
    ]
@@ -196,7 +194,6 @@
     "from streamsx.kafka.schema import Schema\n",
     "from streamsx.kafka import AuthMethod\n",
     "\n",
-    "topic = \"my_topic\"  ## change this to an existing topic, it should have multiple partitions\n",
     "consumer_topology = Topology(name='KafkaParallelSample-Consumer')"
    ]
   },
@@ -206,7 +203,7 @@
    "source": [
     "## 2.1 Create the consumer properties from your connection details\n",
     "\n",
-    "Use the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/1.4.0/#streamsx.kafka.create_connection_properties) to create the properties.\n",
+    "Use the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties) to create the properties.\n",
     "\n",
     "Dependent on the Kafka cluster configuration you may need\n",
     "- A trusted server CA certificate\n",
@@ -214,7 +211,9 @@
     "  - No authentication\n",
     "  - SASL/PLAIN - you need a username and a password\n",
     "  - SASL/SCRAM-SHA-512 - you need a username and a password\n",
-    "  - TLS - you need a client certificate and the private key of the certificate.\n"
+    "  - TLS - you need a client certificate and the private key of the certificate.\n",
+    "\n",
+    "You always need a topic name that can be accessed. Enter at least the bootstrap servers and the topic name into the below cell."
    ]
   },
   {
@@ -223,8 +222,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "topic = \"my_topic\"  ## change this to an existing topic, it should have multiple partitions\n",
+    "bootstrap_servers = \"host.domain:9092\"    ## change the bootstrap server(s) here\n",
+    "\n",
     "# this template connects to an unsecured (no TLS) cluster without authentication \n",
-    "bootstrap_servers = \"host.domain:9092\"    ## add the bootstrap server(s) here\n",
     "connect_tls = False     # set True when Kafka must be connected with TLS\n",
     "ca_server_cert = None   # use PEM or filename if required, see section 1.3.1\n",
     "auth = AuthMethod.NONE  # chose one of NONE, TLS, PLAIN, SCRAM_SHA_512\n",
@@ -269,7 +270,7 @@
     "\n",
     "From the Kafka broker we fetch keyed messages, where the message type is a string. In addition to it we want to fetch the message meta data, like partition number, message timestamp, and other.\n",
     "\n",
-    "That's why we specify `Schema.StringMessageMeta` as the schema for the created Stream in the [kafka.subscribe](https://streamsxkafka.readthedocs.io/en/1.4.0/index.html#streamsx.kafka.subscribe) function.\n",
+    "That's why we specify `Schema.StringMessageMeta` as the schema for the created Stream in the [kafka.subscribe](https://streamsxkafka.readthedocs.io/en/latest/index.html#streamsx.kafka.subscribe) function.\n",
     "\n",
     "This schema is a structured schema that defines following attributes:\n",
     "\n",
@@ -514,7 +515,12 @@
     "\n",
     "### 3.2.1 Create the producer properties from your connection details\n",
     "\n",
-    "We will be using the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/1.4.0/#streamsx.kafka.create_connection_properties), but will use the `producer_topology` variable as the `topology` parameter to get any created keystore or truststore files attached as file dependencies.\n"
+    "We will be using the helper function [create_connection_properties(...)](https://streamsxkafka.readthedocs.io/en/latest/#streamsx.kafka.create_connection_properties), but will use the `producer_topology` variable as the `topology` parameter to get any created keystore or truststore files attached as file dependencies.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    <b>Info:</b>\n",
+    "We intentionally do not re-use the consumer properties for the producer application. In case we use certificates in any way, we have created consumer configurations that include a keystore or truststore file, which was added as a file dependency to the consumer topology. When we re-used the consumer properties here we would miss the file dependency in the prodcuer topology.\n",
+    "</div>\n"
    ]
   },
   {
@@ -684,7 +690,7 @@
    "source": [
     "# 7. Congratulation\n",
     "\n",
-    "You created a non-trivial Streams application that connected to a Kafka broker with a consumer group for load sharing. Then you parallelized the processing of the fetched messages in a way that the keys of the messages were pinned to the parallel channels. Finally you sampled the processed data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe to it.\n",
+    "You created a non-trivial Streams application that connected to a Kafka cluster with a consumer group for load sharing. Then you parallelized the processing of the fetched messages in a way that the keys of the messages were pinned to the parallel channels. Finally you sampled the processed data by using a view, and published the data within the Streams instance, so that other Streams applications in the instance can subscribe to it.\n",
     "\n",
     "Not to forget, to bring the application to life, you also created a simple producer application, which published artificial sensor data to the Kafka topic."
    ]
